[package]
name = "local_area_network"
version = "0.1.0"
edition = "2024"

[lib]
name = "local_area_network"
path = "src/lib.rs"

[[bin]]
name = "arping"
path = "src/bin/arping.rs"

[[bin]]
name = "ping"
path = "src/bin/ping.rs"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
default-net = "0.22.0"
libc = "0.2.177"
